--- a/src/education.css
+++ b/src/education.css
@@ -5,8 +5,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 100%;
-  padding: 80px 20px;
+  /* width: 100%; */
+  /* padding: 80px 20px; */
 }
 
 /* Section Title (Education Journey) */
