--- a/src/facecard.css
+++ b/src/facecard.css
@@ -31,6 +31,7 @@ body,
   transform: translateY(20px);
   transition: opacity 1.5s ease-out, transform 1.5s ease-out;
   border: 1px solid var(--card-border);
+  overflow-X:hidden;
 }
 
 /* Hero section specific styles */
@@ -39,17 +40,17 @@ body,
   overflow: hidden;
 }
 
-.hero-section::before {
+/* .hero-section::before {
   content: "";
   position: absolute;
   top: -50px;
   right: -50px;
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background: radial-gradient(circle, rgba(76, 182, 94, 0.2) 0%, rgba(76, 182, 94, 0) 70%);
   z-index: 0;
-}
+} */
 
 .hero-section::after {
   content: "";
@@ -452,7 +453,7 @@ p {
 
 @media (max-width: 768px) {
   .portfolio-container {
-    margin: 20px 10px;
+    margin: 20px 0px;
     padding: 20px;
     min-height: auto;
   }
