--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  overflow-X: hidden; /* Prevent both horizontal and vertical overflow */
+  overflow-x: hidden; /* Prevent both horizontal and vertical overflow */
 }
 
 
