--- a/src/skills.css
+++ b/src/skills.css
@@ -1,15 +1,16 @@
 /* Skills.css */
 
 .skills-container {
-  max-width: 1200px;
-  margin: 40px 20px;
-  padding: 80px 20px;
+  /* max-width: 1200px; */
+  /* margin: 40px 20px; */
+  /* padding: 80px 20px; */
   text-align: center;
   display: grid;
   gap: 20px; /* Adds spacing between grid items */
   justify-content: center;
   align-items: start;
   background-color:var(--bg-secondary);
+  
 }
 
 .skills-grid {
@@ -107,11 +108,11 @@
 /* Responsive Design */
 @media (max-width: 768px) {
   .skills-container {
-    padding: 80px 20px;
+    padding: 80px 0px;
   }
 
   .skills-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr ;
     gap: 20px;
   }
 }
