--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -15,6 +15,7 @@
   box-shadow: 0 2px 10px var(--shadow-color);
   opacity: 1;
   transform: translateY(0);
+  overflow:visible;
 }
 
 .navbar.visible {
@@ -134,24 +135,25 @@
   transform: scale(1.1);
   color: var(--accent-secondary);
 }
-
+/* 
 .mobile-menu-overlay {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: auto;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 999;
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease;
+  overflow:clip;
 }
 
 .mobile-menu-overlay.active {
   opacity: 1;
   visibility: visible;
-}
+} */
 
 .nav-theme-toggle {
   margin-left: 1rem;
